force-app/main/default/objects/JBCXM__Publish_Content__c/JBCXM__Publish_Content__c.object-meta.xml
<CustomObject>
    <label>Publish Content</label>
    <nameField>
        <label>Publish Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publish Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>