force-app/main/default/objects/JBCXM__Publish_Content__c/fields/JBCXM__AccountID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AccountID__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Publish Content</relationshipLabel>
    <relationshipName>Publish_Content</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>