force-app/main/default/objects/JBCXM__Publish_Content__c/fields/JBCXM__AppEventID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AppEventID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Events</label>
    <referenceTo>JBCXM__AppEvents__c</referenceTo>
    <relationshipLabel>Publish Content</relationshipLabel>
    <relationshipName>Publish_Content</relationshipName>
    <type>Lookup</type>
</CustomField>