force-app/main/default/objects/JBCXM__Publish_Content__c/fields/JBCXM__Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <type>DateTime</type>
</CustomField>