force-app/main/default/objects/JBCXM__Publish_Content__c/fields/JBCXM__Message_Content__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Message_Content__c</fullName>
    <label>Message Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>