force-app/main/default/objects/JBCXM__Publish_Content__c/fields/JBCXM__RecordId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecordId__c</fullName>
    <label>RecordId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>