force-app/main/default/objects/JBCXM__Publish_Content__c/fields/JBCXM__User__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned User</relationshipLabel>
    <relationshipName>Assigned_User</relationshipName>
    <type>Lookup</type>
</CustomField>